--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,7 @@
 header {
     position: relative;
-
     width: 100%;
     height: 4em;
-
     top: -8px;
     left: -8px;
 }
@@ -11,43 +9,33 @@ header {
 @font-face {
     font-family: 'Another Typewriter';
     src: url('Assets/atwriter.ttf');
-
     font-family: 'Edo SZ';
     src: url('Assets/edosz.ttf');
-
     font-family: 'Hujan';
     src: url('Assets/Hujan.ttf');
 }
 
 h1 {
     font-family: 'Another Typewriter';
-    background-color: black; 
+    background-color: black;
     font-weight: bolder;
     color: white;
-    
     border-style: solid;
-    
     font-size: 3rem;
-    
     letter-spacing: 0.15rem;
-
     padding-right: 0.5em;
     padding-left: 0.5em;
     padding-bottom: 0.1em;
     padding-top: 0.1em;
-
     text-align: center;
-  
     margin: 0.5em;
 }
 
 h2 {
     font-family: Hujan;
     font-size: 2.5rem;
-    
     font-weight: bold;
     text-align: center;
-
     margin-bottom: 0;
 }
 
@@ -66,7 +54,8 @@ body {
 }
 
 p {
-    margin: 1em;    
+    margin: 1em;
+    white-space: normal;
 }
 
 a {
@@ -79,22 +68,18 @@ article {
 
 .game {
     overflow: hidden;
-
     position: relative;
-
     margin: 1em;
     padding: 1rem;
-
     border: solid;
 }
 
-.game > p {
-    margin: 0;
-    padding-bottom: 1em;
-
-    width: 45%;
-    height: 80%;
-}
+    .game > p {
+        margin: 0;
+        padding-bottom: 1em;
+        width: 45%;
+        height: 80%;
+    }
 
 
 .line {
@@ -111,22 +96,18 @@ article {
 
 .video {
     margin: 1em;
-
     position: absolute;
     right: 0;
     top: 0;
-
     width: 50%;
 }
 
 .game > img {
     display: block;
     margin: 1em;
-  
     position: absolute;
     right: 0;
     top: 0;
-
     width: 50%;
     height: auto;
 }
