--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,15 +31,18 @@ h1 {
 }
 
 h2 {
-    font-family: Hujan;
+    font-family: 'Another Typewriter';
     font-size: 2.5rem;
+    letter-spacing: 0.1rem;
     font-weight: bold;
     text-align: center;
     margin-bottom: 0;
 }
 
 h4 {
+    font-family: 'Another Typewriter';
     font-size: 1.75rem;
+    letter-spacing: 0.15rem;
     margin: 0.5rem;
     margin-bottom: 1rem;
 }
@@ -60,8 +63,15 @@ p {
 
 a {
     font-weight: bold;
+    color: white;
+    background-color: rgb(128, 128, 128, 0.25);
 }
 
+    a:hover {
+        background-color: rgb(80, 80, 80, 0.5);
+        font-weight: 800;
+    }
+    
 article {
     padding-bottom: 1em;
 }
