--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,14 +62,14 @@ p {
 }
 
 a {
-    font-weight: bold;
-    color: white;
-    background-color: rgb(128, 128, 128, 0.25);
+    /*font-weight: bold;*/
+    color: inherit;
+    text-decoration: none;
+    font-style: italic;
 }
 
     a:hover {
-        background-color: rgb(80, 80, 80, 0.5);
-        font-weight: 800;
+        text-decoration: underline;
     }
     
 article {
